@@ -862,3 +862,6 @@ seen. gmtime warning still there
 - Added in Fish's patches
 - Added bitching when you lack needed IRC commands
 - Removed REMGLINE
+- Fixed a typo in the win32 makefile
+- Really removed remgline (since sts didn't really do it)
+- Made changes so the new modules compile on win32
